force-app/main/default/objects/ARTL_SAMUserMatrix__c/ARTL_SAMUserMatrix__c.object-meta.xml
<CustomObject>
    <label>SAM User Matrix</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAM User Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>