force-app/main/default/objects/ARTL_SAMUserMatrix__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAM User Matrix</relationshipLabel>
    <relationshipName>SAM_User_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>