force-app/main/default/objects/ARTL_SAMUserMatrix__c/fields/CCE__c.field-meta.xml
<CustomField>
    <fullName>CCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAM_User_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>