force-app/main/default/objects/ARTL_SAMUserMatrix__c/fields/CPH__c.field-meta.xml
<CustomField>
    <fullName>CPH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAM_User_Matrix3</relationshipName>
    <type>Lookup</type>
</CustomField>