force-app/main/default/objects/ARTL_SAMUserMatrix__c/fields/SAM__c.field-meta.xml
<CustomField>
    <fullName>SAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAM_User_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>