force-app/main/default/objects/ARTL_SAMUserMatrix__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAM&apos;s TL</description>
    <label>TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAM_User_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>